tests/typechecking/invalid/closure/closure_call_with_bad_type.ml
let rec subBy x = 
  let rec substractor y = x - y in
  substractor in
  let res = (subBy 3) 6.0 in
  print_int(res)